# zhipuai-sdk-rust

./: Cargo.toml  README.md
examples/: chatglm_6b.rs
src/: api.rs  error.rs  lib.rs  model.rs  models.rs  utils.rs
src/models/: characterglm.rs  chatglm.rs  mod.rs  text_embedding.rs
