[package]
name = "zhipuai-sdk-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
anyhow = "1.0"
tracing = "*"
tracing-subscriber = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
eventsource-client = "0.11.0"
jwt = "0.16"
hmac = "*"
sha2 = "*"
futures = "0.3.21"
reqwest = "0.11.22"
dotenv = "0.15.0"